@@ -1,5 +1,7 @@
 Version 3.1-3
 
+ o Fixed a bug in Effect.clmm, Effect.mer, and Effect.lme that caused failure with a data.framel named m
+ 
  o Fixed bug in Effect.clmm and Effect.clmm2
  
  o Improved stability of handling linear and generalized linear mixed effects models from lme4 and nlme.
